syntax = "proto3";

option csharp_namespace = "MicroservicioVehiculos.Protos";
package vehiculo;

// Modelo de datos
message VehiculoModel {
  int32 id = 1;
  string placa = 2;
  string tipoMaquinaria = 3;      // "Liviana" o "Pesada"
  string estadoOperativo = 4;     // "Operativo", "Mantenimiento"
  double capacidadCombustible = 5; // usar double para decimal
  string fechaRegistro = 6;       // ISO 8601 text
  double consumoCombustibleKm = 7;
  string estado = 8;              // "Eliminado", "Activo"
  string descripcion = 9;  
  string nombre = 10;  
}

// Requests y Responses
message GetVehiculoRequest {
  int32 id = 1;
}

message GetVehiculoResponse {
  VehiculoModel vehiculo = 1;
}

message GetAllVehiculosResponse {
  repeated VehiculoModel vehiculos = 1;
}

message CreateVehiculoRequest {
  VehiculoModel vehiculo = 1;
}

message CreateVehiculoResponse {
  VehiculoModel vehiculo = 1;
}

message UpdateVehiculoRequest {
  VehiculoModel vehiculo = 1;
}

message UpdateVehiculoResponse {
  VehiculoModel vehiculo = 1;
}

message DeleteVehiculoRequest {
  int32 id = 1;
}

message DeleteVehiculoResponse {
  bool success = 1;
}

message Empty {}

// Servicio gRPC
service VehiculoService {
  rpc GetVehiculo(GetVehiculoRequest) returns (GetVehiculoResponse);
  rpc GetAllVehiculos(Empty) returns (GetAllVehiculosResponse);
  rpc CreateVehiculo(CreateVehiculoRequest) returns (CreateVehiculoResponse);
  rpc UpdateVehiculo(UpdateVehiculoRequest) returns (UpdateVehiculoResponse);
  rpc DeleteVehiculo(DeleteVehiculoRequest) returns (DeleteVehiculoResponse);
}
